[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprite/player/bullet_hell/Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://tiles/world/stage_2/background/bullet_hell_bg.png" type="Texture" id=2]
[ext_resource path="res://tiles/world/stage_1/ground/fragile_ground_cliff.png" type="Texture" id=3]
[ext_resource path="res://tiles/world/stage_1/ground/normal_ground_cliff.png" type="Texture" id=4]
[ext_resource path="res://tiles/world/stage_1/walls/normal_wall_cliff.png" type="Texture" id=5]
[ext_resource path="res://GUI/PlayerGUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/world/stage_2.gd" type="Script" id=7]
[ext_resource path="res://tiles/world/stage_1/WaterTexture.tres" type="Texture" id=8]
[ext_resource path="res://sounds/HalfWind.wav" type="AudioStream" id=9]
[ext_resource path="res://DeathExplosion.tscn" type="PackedScene" id=17]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="TileSet" id=2]
1/name = "normal_ground_cliff.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
3/name = "fragile_ground_cliff.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/navigation = SubResource( 1 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "WaterTexture.tres 4"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=4]
0/name = "normal_wall_cliff.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Environment" id=5]
background_mode = 4
fog_color = Color( 1, 0.337255, 0.988235, 1 )
fog_sun_color = Color( 1, 0.901961, 0.701961, 1 )
dof_blur_far_distance = 8192.0
glow_enabled = true
glow_strength = 1.4
glow_blend_mode = 1
glow_bicubic_upscale = true

[node name="stage_2" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ship" parent="." instance=ExtResource( 1 )]
position = Vector2( 502.234, 410.593 )

[node name="BossStage_2" type="Position2D" parent="."]
position = Vector2( 514.942, 125.919 )

[node name="playerSpawn" type="Position2D" parent="."]
position = Vector2( 503.056, 447.682 )

[node name="theCliffsground" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="theCliffswall" type="TileMap" parent="." groups=[
"invincible",
]]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -3538909, 0, 0, -3538908, 0, 0, -3538907, 0, 0, -3538906, 0, 0, -3538905, 0, 0, -3538904, 0, 0, -3538903, 0, 0, -3538902, 0, 0, -3538901, 0, 0, -3538900, 0, 0, -3538899, 0, 0, -3538898, 0, 0, -3538897, 0, 0, -3538896, 0, 0, -3538895, 0, 0, -3538894, 0, 0, -3538893, 0, 0, -3473405, 0, 0, -3473404, 0, 0, -3473403, 0, 0, -3473402, 0, 0, -3473401, 0, 0, -3473400, 0, 0, -3473399, 0, 0, -3473398, 0, 0, -3473397, 0, 0, -3473396, 0, 0, -3473395, 0, 0, -3473394, 0, 0, -3473393, 0, 0, -3473392, 0, 0, -3473391, 0, 0, -3473390, 0, 0, -3473389, 0, 0, -3473388, 0, 0, -3473387, 0, 0, -3473386, 0, 0, -3473385, 0, 0, -3473384, 0, 0, -3473383, 0, 0, -3473382, 0, 0, -3473381, 0, 0, -3473380, 0, 0, -3473379, 0, 0, -3473378, 0, 0, -3473377, 0, 0, -3473376, 0, 0, -3473375, 0, 0, -3473374, 0, 0, -3473357, 0, 0, -3342350, 0, 0, -3342349, 0, 0, -3342348, 0, 0, -3342347, 0, 0, -3342346, 0, 0, -3342345, 0, 0, -3342344, 0, 0, -3342343, 0, 0, -3342342, 0, 0, -3342341, 0, 0, -3342340, 0, 0, -3342339, 0, 0, -3342338, 0, 0, -3342337, 0, 0, -3407872, 0, 0, -3407871, 0, 0, -3407870, 0, 0, -3407821, 0, 0, -3276814, 0, 0, -3276813, 0, 0, -3342285, 0, 0, -3211278, 0, 0, -3211277, 0, 0, -3276749, 0, 0, -3145742, 0, 0, -3145741, 0, 0, -3211213, 0, 0, -3080205, 0, 0, -3145677, 0, 0, -3014669, 0, 0, -3080141, 0, 0, -2949133, 0, 0, -3014605, 0, 0, -2883597, 0, 0, -2949069, 0, 0, -2818061, 0, 0, -2883533, 0, 0, -2752525, 0, 0, -2817997, 0, 0, -2686989, 0, 0, -2752461, 0, 0, -2621453, 0, 0, -2686925, 0, 0, -2555917, 0, 0, -2621389, 0, 0, -2490381, 0, 0, -2555853, 0, 0, -2424845, 0, 0, -2490317, 0, 0, -2359309, 0, 0, -2424781, 0, 0, -2293773, 0, 0, -2359245, 0, 0, -2228237, 0, 0, -2293709, 0, 0, -2162701, 0, 0, -2228173, 0, 0, -2097165, 0, 0, -2162637, 0, 0, -2031629, 0, 0, -2097101, 0, 0, -1966093, 0, 0, -2031565, 0, 0, -1900557, 0, 0, -1966029, 0, 0, -1835021, 0, 0, -1900493, 0, 0, -1769485, 0, 0, -1834957, 0, 0, -1703950, 0, 0, -1769421, 0, 0, -1638414, 0, 0, -1703885, 0, 0, -1572878, 0, 0, -1638349, 0, 0, -1507342, 0, 0, -1572813, 0, 0, -1441806, 0, 0, -1507277, 0, 0, -1376270, 0, 0, -1441741, 0, 0, -1310734, 0, 0, -1376205, 0, 0, -1245198, 0, 0, -1310669, 0, 0, -1179662, 0, 0, -1245133, 0, 0, -1114126, 0, 0, -1179597, 0, 0, -1048590, 0, 0, -1114061, 0, 0, -983054, 0, 0, -1048525, 0, 0, -917518, 0, 0, -982989, 0, 0, -851982, 0, 0, -917453, 0, 0, -786446, 0, 0, -851959, 0, 0, -851958, 0, 0, -851957, 0, 0, -851956, 0, 0, -851955, 0, 0, -851954, 0, 0, -851953, 0, 0, -851952, 0, 0, -851951, 0, 0, -851950, 0, 0, -851949, 0, 0, -851948, 0, 0, -851947, 0, 0, -851946, 0, 0, -851945, 0, 0, -851944, 0, 0, -851943, 0, 0, -851917, 0, 0, -720910, 0, 0, -786432, 0, 0, -786431, 0, 0, -786430, 0, 0, -786429, 0, 0, -786428, 0, 0, -786427, 0, 0, -786426, 0, 0, -786425, 0, 0, -786424, 0, 0, -786406, 0, 0, -786405, 0, 0, -786404, 0, 0, -786403, 0, 0, -786381, 0, 0, -655374, 0, 0, -655366, 0, 0, -655365, 0, 0, -655364, 0, 0, -655363, 0, 0, -655362, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -720893, 0, 0, -720892, 0, 0, -720891, 0, 0, -720890, 0, 0, -720889, 0, 0, -720888, 0, 0, -720887, 0, 0, -720886, 0, 0, -720885, 0, 0, -720884, 0, 0, -720883, 0, 0, -720882, 0, 0, -720881, 0, 0, -720880, 0, 0, -720879, 0, 0, -720878, 0, 0, -720877, 0, 0, -720876, 0, 0, -720875, 0, 0, -720874, 0, 0, -720873, 0, 0, -720872, 0, 0, -720871, 0, 0, -720870, 0, 0, -720869, 0, 0, -720868, 0, 0, -720867, 0, 0, -720866, 0, 0, -720865, 0, 0, -720864, 0, 0, -720863, 0, 0, -720845, 0, 0, -589838, 0, 0, -589831, 0, 0, -589825, 0, 0, -655328, 0, 0, -655326, 0, 0, -655325, 0, 0, -655324, 0, 0, -655309, 0, 0, -524302, 0, 0, -524295, 0, 0, -524289, 0, 0, -589792, 0, 0, -589787, 0, 0, -589786, 0, 0, -589773, 0, 0, -458766, 0, 0, -458761, 0, 0, -458760, 0, 0, -458753, 0, 0, -524256, 0, 0, -524250, 0, 0, -524249, 0, 0, -524237, 0, 0, -393230, 0, 0, -393225, 0, 0, -393217, 0, 0, -458720, 0, 0, -458712, 0, 0, -458711, 0, 0, -458710, 0, 0, -458701, 0, 0, -327694, 0, 0, -327690, 0, 0, -327689, 0, 0, -327681, 0, 0, -393184, 0, 0, -393173, 0, 0, -393165, 0, 0, -262158, 0, 0, -262155, 0, 0, -262154, 0, 0, -262145, 0, 0, -327648, 0, 0, -327636, 0, 0, -327628, 0, 0, -196622, 0, 0, -196619, 0, 0, -196609, 0, 0, -262112, 0, 0, -262100, 0, 0, -262099, 0, 0, -262092, 0, 0, -131086, 0, 0, -131084, 0, 0, -131073, 0, 0, -196576, 0, 0, -196563, 0, 0, -196556, 0, 0, -65550, 0, 0, -65548, 0, 0, -65537, 0, 0, -131040, 0, 0, -131027, 0, 0, -131020, 0, 0, -14, 0, 0, -12, 0, 0, -1, 0, 0, -65504, 0, 0, -65490, 0, 0, -65484, 0, 0, 65522, 0, 0, 65524, 0, 0, 65535, 0, 0, 32, 0, 0, 46, 0, 0, 52, 0, 0, 131058, 0, 0, 131059, 0, 0, 131060, 0, 0, 131071, 0, 0, 65568, 0, 0, 65583, 0, 0, 65588, 0, 0, 196594, 0, 0, 196595, 0, 0, 196607, 0, 0, 131104, 0, 0, 131119, 0, 0, 131120, 0, 0, 131124, 0, 0, 262130, 0, 0, 262131, 0, 0, 262143, 0, 0, 196640, 0, 0, 196656, 0, 0, 196660, 0, 0, 327666, 0, 0, 327679, 0, 0, 262176, 0, 0, 262192, 0, 0, 262196, 0, 0, 393202, 0, 0, 393215, 0, 0, 327712, 0, 0, 327729, 0, 0, 327732, 0, 0, 458738, 0, 0, 458751, 0, 0, 393248, 0, 0, 393265, 0, 0, 393268, 0, 0, 524274, 0, 0, 524287, 0, 0, 458784, 0, 0, 458801, 0, 0, 458804, 0, 0, 589810, 0, 0, 589823, 0, 0, 524320, 0, 0, 524337, 0, 0, 524340, 0, 0, 655346, 0, 0, 655359, 0, 0, 589856, 0, 0, 589873, 0, 0, 589876, 0, 0, 720882, 0, 0, 720895, 0, 0, 655392, 0, 0, 655409, 0, 0, 655412, 0, 0, 786418, 0, 0, 786431, 0, 0, 720928, 0, 0, 720945, 0, 0, 720948, 0, 0, 851954, 0, 0, 851967, 0, 0, 786464, 0, 0, 786482, 0, 0, 786484, 0, 0, 917490, 0, 0, 917503, 0, 0, 852000, 0, 0, 852018, 0, 0, 852019, 0, 0, 852020, 0, 0, 983026, 0, 0, 983039, 0, 0, 917536, 0, 0, 917555, 0, 0, 917556, 0, 0, 1048562, 0, 0, 1048575, 0, 0, 983072, 0, 0, 983092, 0, 0, 1114098, 0, 0, 1114111, 0, 0, 1048608, 0, 0, 1048628, 0, 0, 1179634, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114164, 0, 0, 1245170, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179700, 0, 0, 1310706, 0, 0, 1245236, 0, 0, 1376242, 0, 0, 1310772, 0, 0, 1441777, 0, 0, 1376308, 0, 0, 1507313, 0, 0, 1441844, 0, 0, 1572849, 0, 0, 1507380, 0, 0, 1638385, 0, 0, 1572916, 0, 0, 1703921, 0, 0, 1638452, 0, 0, 1769457, 0, 0, 1703988, 0, 0, 1834993, 0, 0, 1769524, 0, 0, 1900529, 0, 0, 1835060, 0, 0, 1966065, 0, 0, 1900596, 0, 0, 2031601, 0, 0, 1966132, 0, 0, 2097137, 0, 0, 2031668, 0, 0, 2162673, 0, 0, 2097204, 0, 0, 2228209, 0, 0, 2162740, 0, 0, 2293745, 0, 0, 2228276, 0, 0, 2359281, 0, 0, 2293812, 0, 0, 2424817, 0, 0, 2359348, 0, 0, 2490353, 0, 0, 2424884, 0, 0, 2555889, 0, 0, 2490420, 0, 0, 2621425, 0, 0, 2555956, 0, 0, 2686961, 0, 0, 2621492, 0, 0, 2752497, 0, 0, 2687028, 0, 0, 2818033, 0, 0, 2752564, 0, 0, 2883569, 0, 0, 2818100, 0, 0, 2949105, 0, 0, 2949106, 0, 0, 2949107, 0, 0, 2949108, 0, 0, 2949109, 0, 0, 2949110, 0, 0, 2949111, 0, 0, 2949112, 0, 0, 2949113, 0, 0, 2949114, 0, 0, 2949115, 0, 0, 2949116, 0, 0, 2949117, 0, 0, 2949118, 0, 0, 2949119, 0, 0, 2883584, 0, 0, 2883585, 0, 0, 2883586, 0, 0, 2883587, 0, 0, 2883588, 0, 0, 2883589, 0, 0, 2883590, 0, 0, 2883591, 0, 0, 2883592, 0, 0, 2883593, 0, 0, 2883594, 0, 0, 2883595, 0, 0, 2883596, 0, 0, 2883597, 0, 0, 2883598, 0, 0, 2883599, 0, 0, 2883600, 0, 0, 2883601, 0, 0, 2883602, 0, 0, 2883636, 0, 0, 2949139, 0, 0, 2949140, 0, 0, 2949141, 0, 0, 2949142, 0, 0, 2949143, 0, 0, 2949144, 0, 0, 2949145, 0, 0, 2949146, 0, 0, 2949147, 0, 0, 2949148, 0, 0, 2949149, 0, 0, 2949150, 0, 0, 2949151, 0, 0, 2949152, 0, 0, 2949153, 0, 0, 2949154, 0, 0, 2949155, 0, 0, 2949156, 0, 0, 2949157, 0, 0, 2949158, 0, 0, 2949159, 0, 0, 2949160, 0, 0, 2949161, 0, 0, 2949162, 0, 0, 2949163, 0, 0, 2949164, 0, 0, 2949165, 0, 0, 2949166, 0, 0, 2949167, 0, 0, 2949168, 0, 0, 2949169, 0, 0, 2949170, 0, 0, 2949171, 0, 0, 2949172, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.513726, 0.258824, 0.580392, 1 )
motion_mirroring = Vector2( 1920, 768 )

[node name="the_cliffs_stage_1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 497, 338 )
scale = Vector2( 0.858419, 1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Non_GUI" type="CanvasLayer" parent="."]
layer = -2
follow_viewport_enable = true

[node name="CanvasModulate" type="CanvasModulate" parent="Non_GUI"]
color = Color( 0.588235, 0.34902, 0.647059, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="GUI" type="CanvasLayer" parent="."]

[node name="PlayerGUI" parent="GUI" instance=ExtResource( 6 )]
anchor_top = 0.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2

[node name="DeathExplosion" parent="." instance=ExtResource( 17 )]
position = Vector2( 514.234, 122.421 )
scale = Vector2( 1.84, 1.84 )

[node name="EnemySpawn_1" type="Position2D" parent="."]
position = Vector2( 58.7329, -72.0813 )

[node name="EnemySpawn_2" type="Position2D" parent="."]
position = Vector2( 80.1387, -72.0813 )

[node name="EnemySpawn_3" type="Position2D" parent="."]
position = Vector2( 102.139, -72.0813 )

[node name="EnemySpawn_4" type="Position2D" parent="."]
position = Vector2( 730.048, -72.0813 )

[node name="EnemySpawn_5" type="Position2D" parent="."]
position = Vector2( 861.073, -72.9222 )

[node name="EnemySpawn_6" type="Position2D" parent="."]
position = Vector2( 896.391, -72.9222 )

[node name="EnemySpawn_7" type="Position2D" parent="."]
position = Vector2( 924.981, -70.3995 )

[node name="EnemySpawn_8" type="Position2D" parent="."]
position = Vector2( 295.532, -36.2762 )

[node name="Wind" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
